第三次提交

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,12 @@
         android:id="@+id/tv"
         android:text="练习"
         />
+    <RadioButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/saf"
+        android:text="sc"
+        />
 
 
 </LinearLayout>
